			   XPCE ChangeLog
			   ==============

* ENHANCED: barchart package: show cursor indicating a bar can be dragged.

VERSION 6.2.5, distributed with SWI-Prolog 5.2.5
================================================

* FIXED: `process->close' to avoid messages
  Warning: Select failed; error code 9.

* FIXED: Manual tools object browser doesn't open class browser on request.
  Fabien Todescato.

* ADDED: `object <-create_context' to query the goal stack for the object
  that creates me.

VERSION 6.2.4, distributed with SWI-Prolog 5.2.4
================================================

* ENHANCED: pce_global messages and handling of changed definitions.

* ADDED: Support for new SWI-Prolog profiler hooks.

* FIXED: Issues resulting from the :: priority change.  Anders Bouwer.


VERSION 6.2.3, distributed with SWI-Prolog 5.2.3
================================================

* ADDED: library(pce_unclip) to show graphicals partly clipped by their own
  window in a small tooltip-like window.  Used by library(pce_toc).

* MODIFIED: Changed priority of :: using in "comment"::<Body> from 1150 xfx
  to 910 xfy.  Must be above \+ (900) to avoid a conflict.

* FIXED: Visual hierarchy tool to find windows displayed in windows.

* ENHANCED: reset the display after an abort.

* FIXED/ENHANCED: Various issues and expensions with PceEmacs bookmark
  window.

* FIXED: MS-Windows: painting (redraw) in windows displayed inside a
  `tabbed_window'.

* ADDED: `menu_item->background'.

* PORT: Define _THREAD_SAFE for FreeBSD if threaded code is requested.

* FIXED: type := value declaration handling of instance variables.  Also
  updated documentation and added some value := new(Term) to the preprocessor.
  Anders Bouwer.


VERSION 6.2.2, distributed with SWI-Prolog 5.2.2
================================================
		
* FIXED: `frame->keyboard_focus' to use window rather than decorator.
  Could make dialog windows with a scrollbar insensitive to typing.
